--- a/src/App.css
+++ b/src/App.css
@@ -172,3 +172,42 @@ body {
   text-align: center;
   margin-top: 15%;
 }
+
+.submit_btn {
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  background-image: none;
+  border: 1px solid transparent;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  border-radius: 4px;
+  color: #fff;
+  background-color: #5cb85c;
+  border-color: #4cae4c;
+}
+
+
+.input_asin_number {
+  display: block;
+  width: 20%;
+  padding: 6px 12px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 1.5;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border-radius: 4px;  
+}
+
+.product_review_link {
+  color: #fff;
+}
